// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot matches breadcrumbs 1`] = `
<nav
  className="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-igbs82-MuiTypography-root-MuiBreadcrumbs-root"
>
  <ol
    className="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
  >
    <li
      className="MuiBreadcrumbs-li"
    >
      <a
        className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-10fszdq-MuiTypography-root-MuiLink-root"
        href="/it/erogazione"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
      >
        Erogazione
      </a>
    </li>
    <li
      aria-hidden={true}
      className="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
    >
      /
    </li>
    <li
      className="MuiBreadcrumbs-li"
    >
      <span>
        Richieste di fruizione
      </span>
    </li>
  </ol>
</nav>
`;

exports[`Snapshot matches breadcrumbs 2`] = `
<nav
  className="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-igbs82-MuiTypography-root-MuiBreadcrumbs-root"
>
  <ol
    className="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
  >
    <li
      className="MuiBreadcrumbs-li"
    >
      <a
        className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-10fszdq-MuiTypography-root-MuiLink-root"
        href="/it/erogazione"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
      >
        Erogazione
      </a>
    </li>
    <li
      aria-hidden={true}
      className="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
    >
      /
    </li>
    <li
      className="MuiBreadcrumbs-li"
    >
      <a
        className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-10fszdq-MuiTypography-root-MuiLink-root"
        href="/it/erogazione/e-service"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
      >
        I tuoi E-Service
      </a>
    </li>
    <li
      aria-hidden={true}
      className="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
    >
      /
    </li>
    <li
      className="MuiBreadcrumbs-li"
    >
      <span>
        Crea E-Service
      </span>
    </li>
  </ol>
</nav>
`;

exports[`Snapshot matches empty component 1`] = `null`;

exports[`Snapshot matches empty component 2`] = `null`;
